# ADL

./: .gitignore  .gitmodules  README.md  compile_and_move_sentinel.sh  docker-compose.yml  package-lock.json  package.json  sentinel  tsconfig.json
.github/workflows/: build-dev-container.yml  docker-publish.yml  production-pipeline.yml
backend/: .clang-tidy  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  document_server.py  filewatcher.c  filewatcher.cxx  receiver_test.py  sender_test.cxx  sentinel.cxx  test
docker/dev-container/: Dockerfile
elastic/: Dockerfile  README.md  elastic.env  elastic_utils.py  get-credentials.sh  http_ca.crt  request.py  requirements.txt  run.sh  server.py  test.py  updater.py
frontend/: .env.vault  .eslintignore  .eslintrc.cjs  .prettierignore  Caddyfile  LICENSE  copy-webviewer-files.cjs  ecosystem.config.cjs  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/.netlify/functions-internal/: sveltekit-render.mjs
frontend/AthenaDocs/: filewatcher
frontend/data/: .gitignore  SLURM.md  contributing.md
frontend/public/: bundle.js  bundle.js.map  global.css  index.html
frontend/scripts/: startup.sh
frontend/search/: main.py
frontend/src/: app.html
frontend_old/: package.json  svelte.config.js
public/lib/: webviewer.min.js
src/app/: global-error.js  globals.css  icon.css  page.js
src/routes/: +layout.server.js  +layout.server.ts  +layout.svelte  +page.svelte
static/css/: colors.css  fonts.css  stylesheet.css
test/: filewatcher  logfile.txt  recreate.sh
test/test2/: test.txt
(+239 files in other folders)
